[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "Mr_robot"
version = "0.0.1"
authors = [
  { name="©David George", email="viddohjohn@gmail.com" },
]
description = "A powerfull chat gpt tool ever. ..."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bobdave-s/mrbot"
"Bug Tracker" = "https://github.com/bobdave-s/mrbot/issues"